--- a/TemplatedControlSample/TemplatedControlSample/MainPage.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/MainPage.xaml
@@ -7,18 +7,21 @@
       mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <local:MyContentControl>
-            <local:MyContentControl.Content>
+        <StackPanel>
+            <local:MyContentControl>
+                <local:MyContentControl.Content>
+                    <Rectangle Height="100"
+                               Width="100"
+                               Fill="Red" />
+                </local:MyContentControl.Content>
+            </local:MyContentControl>
+
+            <local:MyContentControl>
                 <Rectangle Height="100"
                            Width="100"
                            Fill="Red" />
-            </local:MyContentControl.Content>
-        </local:MyContentControl>
-
-        <local:MyContentControl>
-            <Rectangle Height="100"
-                       Width="100"
-                       Fill="Red" />
-        </local:MyContentControl>
+            </local:MyContentControl>
+            <Button Command="{Binding Command}" x:Name="Button" Click="OnCommandClick"/>
+        </StackPanel>
     </Grid>
 </Page>
