--- a/TemplatedControlSample/TemplatedControlSample/Themes/Generic.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/Themes/Generic.xaml
@@ -68,8 +68,8 @@
                                           x:DeferLoadStrategy="Lazy"
                                           Visibility="Collapsed"
                                           Foreground="{ThemeResource TextControlHeaderForeground}"
-                                          Margin="{Binding RelativeSource={RelativeSource TemplatedParent},Path=TemplateSettings.HeaderMargin}"
-                                          FontWeight="{Binding RelativeSource={RelativeSource TemplatedParent},Path=TemplateSettings.HeaderFontWeight}"
+                                          Margin="0,0,0,8"
+                                          FontWeight="Normal"
                                           Content="{TemplateBinding Header}"
                                           ContentTemplate="{TemplateBinding HeaderTemplate}" />
                         <ContentPresenter Content="{TemplateBinding Content}"
@@ -97,8 +97,8 @@
                                           x:DeferLoadStrategy="Lazy"
                                           Visibility="Collapsed"
                                           Foreground="{ThemeResource TextControlHeaderForeground}"
-                                          Margin="{Binding RelativeSource={RelativeSource TemplatedParent},Path=TemplateSettings.HeaderMargin}"
-                                          FontWeight="{Binding RelativeSource={RelativeSource TemplatedParent},Path=TemplateSettings.HeaderFontWeight}"
+                                          Margin="0,0,0,8"
+                                          FontWeight="Normal"
                                           Content="{TemplateBinding Header}"
                                           ContentTemplate="{TemplateBinding HeaderTemplate}" />
                         <ContentPresenter Content="{TemplateBinding Content}"
@@ -107,6 +107,38 @@
                                           ContentTransitions="{TemplateBinding ContentTransitions}"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="local:DateTimeSelector">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:DateTimeSelector">
+                    <StackPanel Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                        <CalendarDatePicker x:Name="DateElement"
+                                            Margin="0,0,0,5" />
+                        <TimePicker x:Name="TimeElement" />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="local:DateTimeSelector2">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:DateTimeSelector2">
+                    <StackPanel Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                        <CalendarDatePicker Margin="0,0,0,5"
+                                            Date="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Date,Mode=TwoWay}" />
+                        <TimePicker Time="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Time,Mode=TwoWay}" />
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
